--- a/features/onboarding/presentation/src/main/res/values/colors.xml
+++ b/features/onboarding/presentation/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="progress_bar_bg">#1C1B49</color>
 
     <color name="main_text_color">#AEAEFB</color>
+
+    <color name="title_color">#F0F0FF</color>
 </resources>
