onboarding profile settings

--- a/core/compose/src/main/res/values/colors.xml
+++ b/core/compose/src/main/res/values/colors.xml
@@ -10,6 +10,9 @@
     <color name="blue_gradient_start">#20AFFF</color>
     <color name="blue_gradient_end">#C2E0FF</color>
 
+    <color name="green_gradient_start">#00AC07</color>
+    <color name="green_gradient_end">#B9FFBB</color>
+
     <color name="light_color">#FCFBEB</color>
     <color name="blue_color">#303896</color>
 
