--- a/features/feed/presentation/src/main/res/values/colors.xml
+++ b/features/feed/presentation/src/main/res/values/colors.xml
@@ -17,4 +17,6 @@
     <color name="moon_day_bg">#4650BF</color>
     <color name="moon_sign_bg">#9139A7</color>
     <color name="moon_phase_bg">#242768</color>
+
+    <color name="quote_bg">#181D67</color>
 </resources>
