--- a/features/feed/presentation/src/main/res/values/colors.xml
+++ b/features/feed/presentation/src/main/res/values/colors.xml
@@ -19,4 +19,6 @@
     <color name="moon_phase_bg">#242768</color>
 
     <color name="quote_bg">#181D67</color>
+
+    <color name="tip_selected_bg"
 </resources>
