--- a/features/feed/presentation/src/main/res/values/colors.xml
+++ b/features/feed/presentation/src/main/res/values/colors.xml
@@ -20,5 +20,5 @@
 
     <color name="quote_bg">#181D67</color>
 
-    <color name="tip_selected_bg"
+<!--    <color name="tip_selected_bg"-->
 </resources>
