--- a/features/feed/presentation/src/main/res/values/colors.xml
+++ b/features/feed/presentation/src/main/res/values/colors.xml
@@ -20,5 +20,6 @@
 
     <color name="quote_bg">#181D67</color>
 
-<!--    <color name="tip_selected_bg"-->
+    <color name="tip_selected_bg">#7E4BE1</color>
+    <color name="tip_unselected_bg">#80584CAE</color>
 </resources>
