--- a/features/feed/presentation/src/main/res/values/colors.xml
+++ b/features/feed/presentation/src/main/res/values/colors.xml
@@ -22,4 +22,5 @@
 
     <color name="tip_selected_bg">#7E4BE1</color>
     <color name="tip_unselected_bg">#80584CAE</color>
+    <color name="tip_text_color">#F0F0FF</color>
 </resources>
