--- a/features/selfknowledge/presentation/src/main/res/values/colors.xml
+++ b/features/selfknowledge/presentation/src/main/res/values/colors.xml
@@ -1,2 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+    <color name="main_bg">#2E3582</color>
+    <color name="divider_color">#804650BF</color>
+</resources>
