--- a/features/selfknowledge/presentation/src/main/res/values/colors.xml
+++ b/features/selfknowledge/presentation/src/main/res/values/colors.xml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="main_bg">#2E3582</color>
+    <color name="selfknowledge_bg">#3A3A99</color>
     <color name="divider_color">#804650BF</color>
+
+    <color name="name_gradient_1">#FFEBC9</color>
+    <color name="name_gradient_2">#FFE9C5</color>
+    <color name="name_gradient_3">#FEE2BB</color>
+    <color name="name_gradient_4">#FFCD8E</color>
+    <color name="name_gradient_5">#FFBC72</color>
 </resources>
