--- a/features/selfknowledge/presentation/src/main/res/values/colors.xml
+++ b/features/selfknowledge/presentation/src/main/res/values/colors.xml
@@ -2,6 +2,8 @@
 <resources>
     <color name="selfknowledge_bg">#3A3A99</color>
     <color name="divider_color">#804650BF</color>
+    <color name="cloudy_color">#F0F0FF</color>
+    <color name="point_title_color">#AEAEFB</color>
 
     <color name="name_gradient_1">#FFEBC9</color>
     <color name="name_gradient_2">#FFE9C5</color>
@@ -13,4 +15,9 @@
     <color name="bg_selfknowledge_item_2">#9139A7</color>
     <color name="bg_selfknowledge_item_3">#5639A7</color>
     <color name="bg_selfknowledge_item_4">#004A8E</color>
+
+    <color name="divider_selfknowledge_item_1">#6370FA</color>
+    <color name="divider_selfknowledge_item_2">#FA63F4</color>
+    <color name="divider_selfknowledge_item_3">#AF63FA</color>
+    <color name="divider_selfknowledge_item_4">#0D70C9</color>
 </resources>
