--- a/core/compose/src/main/res/values/colors.xml
+++ b/core/compose/src/main/res/values/colors.xml
@@ -3,6 +3,7 @@
 
     <color name="main_yellow">#FBE787</color>
     <color name="main_green">#00B84A</color>
+    <color name="main_pink">#9139A7</color>
 
     <color name="orange_gradient_start">#FFA746</color>
     <color name="orange_gradient_end">#FFEBCE</color>
