--- a/features/compatibility/presentation/src/main/res/values/colors.xml
+++ b/features/compatibility/presentation/src/main/res/values/colors.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <color name="empty_title_color">#FCFBEB</color>
 
     <color name="compatibility_item_bg">#4650BF</color>
@@ -8,5 +8,6 @@
 
     <color name="progress_bg">#13181E</color>
 
-
+    <color name="details_advice_bg">#181D67</color>
+    <color name="details_important_points_bg">#205EA7</color>
 </resources>
