--- a/core/compose/src/main/res/values/colors.xml
+++ b/core/compose/src/main/res/values/colors.xml
@@ -11,8 +11,8 @@
     <color name="pink_gradient_start">#FC6CFF</color>
     <color name="pink_gradient_end">#EAECFF</color>
 
-    <color name="blue_gradient_start">#20AFFF</color>
-    <color name="blue_gradient_end">#C2E0FF</color>
+    <color name="blue_gradient_start">#2F2AFF</color>
+    <color name="blue_gradient_end">#CBD1FF</color>
 
     <color name="green_gradient_start">#00AC07</color>
     <color name="green_gradient_end">#B9FFBB</color>
