--- a/features/wisdom/presentation/src/main/res/values/colors.xml
+++ b/features/wisdom/presentation/src/main/res/values/colors.xml
@@ -3,4 +3,6 @@
     <color name="main_bg">#2E3582</color>
     <color name="tip_selected_bg">#7E4BE1</color>
     <color name="tip_unselected_bg">#80584CAE</color>
+
+    <color name="item_bg_color_sample">#205EA7</color>
 </resources>
