--- a/features/profile/presentation/src/main/res/values/colors.xml
+++ b/features/profile/presentation/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="profile_bg">#2B317B</color>
     <color name="anonymous_bg">#21266F</color>
     <color name="user_data_bg">#4650BF</color>
+    <color name="settings_item_border">#57579F</color>
 </resources>
