--- a/core/compose/src/main/res/values/colors.xml
+++ b/core/compose/src/main/res/values/colors.xml
@@ -27,7 +27,7 @@
 
     <color name="common_text_color">#AEAEFB</color>
 
-    <color name="sheet_header_bg">#FFEBC9</color>
+    <color name="sheet_header_bg">#FCFBEB</color>
 
     <color name="cloudy_color">#F0F0FF</color>
 
